Log deployment using two new tables, update API endpoints
